--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.port=8050
 
 # Database configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/studentdb
-spring.datasource.username=root
-spring.datasource.password=DaisyRose3@
+spring.datasource.username=
+spring.datasource.password=
 
 # Hibernate and JPA settings
 spring.jpa.hibernate.ddl-auto=update
